[gd_scene load_steps=6 format=3 uid="uid://xt21r1eykddr"]

[ext_resource type="Texture2D" uid="uid://bmu2bw8sopqq5" path="res://Art/Environment/Town/Statue/Statue Fragment TL.png" id="1_c8hjw"]
[ext_resource type="Script" path="res://Scripts/fragment_west.gd" id="1_g2dko"]
[ext_resource type="AudioStream" uid="uid://fchyyxjqruwu" path="res://Sounds/Effects/ExPickupSound.mp3" id="2_836ls"]
[ext_resource type="Texture2D" uid="uid://bqvj2wycgs1pd" path="res://Art/Environment/Town/Statue/Statue Fragment TL Glow.png" id="3_lon58"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bma85"]
radius = 23.0868

[node name="FragmentWest" type="Area2D"]
script = ExtResource("1_g2dko")

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_c8hjw")

[node name="GlowSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_lon58")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bma85")
disabled = true

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_836ls")
pitch_scale = 3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
